--- a/css/table.css
+++ b/css/table.css
@@ -1,23 +1,31 @@
-.table-card {
+.table-card { /*Card da tabela*/
   box-shadow: 0 0 10px 3px rgba(58, 59, 69, .15);
   border-radius: 4px !important;
 }
 
-.table-title {
+.table-title { /*Card com o título*/
+  font-weight: bold;
   border-bottom-left-radius: 0px !important;
   border-bottom-right-radius: 0px !important;
 }
 
-table {
-  width: 100%
-}
-
-td, th {
-  padding: 12px;
+.table-footer { /*Card com a paginação*/
+  border-top-left-radius: 0px !important;
+  border-top-right-radius: 0px !important;
 }
 
 .table-header {
-  width: 50%;
+  font-weight: bold;
+  border-top: 1px solid#E3E6F0;
+  border-bottom: 1px solid#E3E6F0;
+}
+
+.table-body {
+  border-bottom: 1px solid#E3E6F0;
+}
+
+.table-header, .table-body {
+  color: var(--v-text-base)
 }
 
 .btn-models {
